# meeting-mind

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  meetingmind-brief-v2.html  ngrok.yml  package-lock.json  package.json  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_integration_settings.py  003_add_embedding_index.py  004_calendar_autojoin.py
apps/api/app/: main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: action_items.py  calendar.py  integrations.py  meetings.py  slack_commands.py  webhooks.py
apps/api/app/core/: config.py  logging.py  security.py  websocket.py
apps/api/app/db/: base.py
apps/api/app/models/: __init__.py  action_item.py  integration.py  meeting.py  user.py
apps/api/app/schemas/: action_item.py  meeting.py
apps/api/app/services/: calendar.py  composio.py  digest.py  embeddings.py  extraction.py  integrations.py  nudge.py  recall.py  resolution.py  scheduler.py  state_machine.py  storage.py  transcription.py
apps/api/app/workers/: celery_app.py  tasks.py
apps/api/tests/: conftest.py  test_calendar.py  test_extraction.py  test_health.py  test_integrations.py  test_pipeline.py  test_resolution.py  test_scheduler.py  test_slack_commands.py  test_state_machine.py  test_webhook.py
apps/web/: .env.example  next.config.js  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  providers.tsx
apps/web/src/components/: AudioUpload.tsx  (+3 more)
(+11 files in other folders)
